<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffdfeaf1">


    <TextView android:text="@string/my_title" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:textSize="24sp"
        android:id="@+id/textView"
        android:gravity="center" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/media_streamer"
        android:id="@+id/button"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:background="#0277bd"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/super_duo1"
        android:id="@+id/button2"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:background="#0277bd"
        android:onClick="sendMessage2"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/super_duo2"
        android:id="@+id/button3"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:background="#0277bd"
        android:onClick="sendMessage3"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ant_terminator"
        android:id="@+id/button4"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:background="#0277bd"
        android:onClick="sendMessage4"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/materialize"
        android:id="@+id/button5"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:background="#0277bd"
        android:onClick="sendMessage5"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:background="#6a1b9a"
        android:onClick="sendMessage6"/>

</RelativeLayout>
